# parlor

./: .gitignore  README.md  package.json
.github/: release-notes-template.md
.github/workflows/: desktop-packaging.yml
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
frontend/: app.js  index.html  main.js  package.json  styles.css  tailwind.config.js  vendor-loader.js  vite.config.js
public/: index.html
scripts/: build-backend-sidecar.sh
src/: index.html  pyproject.toml  server.py  storage.py  tts.py
